k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: microservices-ingress
  namespace: dev
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /user-service
            pathType: Prefix
            backend:
              service:
                name: user-service
                port:
                  number: 8000
          - path: /task-service
            pathType: Prefix
            backend:
              service:
                name: task-service
                port:
                  number: 8001
          - path: /job-service
            pathType: Prefix
            backend:
              service:
                name: job-service
                port:
                  number: 8002
          - path: /import-service
            pathType: Prefix
            backend:
              service:
                name: import-service
                port:
                  number: 8003
